# QueryEngineX

./: CMakeLists.txt  README.md
conf/: log4cpp.conf  myconf.conf
include/: CacheManager.hpp  Condition.h  Configuration.hpp  DictProducer.h  DictProducer_with_mysql.hpp  Dictionary.hpp  EasyMysql.hpp  EventLoop.h  Interface_of_key_recommander.hpp  KeyRecommander.hpp  LRUCache.hpp  Log.hpp  MutexLock.h  MutexLock_Cache.hpp  NonCopyable.h  RedisManager.hpp  SearchEngineServer.h  SplitTool.hpp  TaskQueue.h  TcpConnection.h  TcpServer.h  Thread.h  ThreadPool.h  Thread_For_Cache.hpp  TimerManager.hpp  TimerTask.hpp  WebPage.hpp  WebPageQuery.hpp  splitTool.h
include/Simhash/: Simhasher.hpp
log/: MyLog.log.1
src/: CacheManager.cpp  Condition.cc  Configuration.cpp  DictProducer.cc  DictProducer_with_mysql.cc  Dictionary.cpp  EasyMysql.cc  EditDistance.cc  EventLoop.cc  InetAddress.cc  Interface_of_key_recommander.cpp  KeyRecommander.cpp  LRUCache.cpp  Log.cc  Makefile  MutexLock.cc  RedisManager.cpp  SocketIO.cc  SplitTool.cpp  TaskQueue.cc  TcpConnection.cc  TestEchoServer.cc  Thread.cc  ThreadPool.cc  TimerManager.cpp  WebPage.cpp  WebPageQuery.cpp  main.cc  main_test_Cache_test.cpp  main_with_mysql.cc  main_with_mysql.cc1  splitTool.cc
test/clienttest/: client.cpp
test/mode1/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  DicProducer.cpp  DicProducer.hpp  SplitTool.cpp  SplitTool.hpp  myconf.conf  textMode1.cpp
test/mode1/data/: cnDict.txt  cnIndex.txt  enDict.txt  enIndex.txt
